--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div class="container">
 				<div class="nav-wrapper">
 					<div class="nav-logo">
-						<img src="/assets/img/logo.png" alt="Logo">
+						<img src="./assets/img/logo.png" alt="Logo">
 					</div>
 					<ul class="menu">
 						<li><a href="#">HOME</a></li>
@@ -56,17 +56,17 @@
 			</div>
 			<div class="popular-menu-grid">
 				<div class="popular-menu-items">
-					<img src="/assets/img/package-1.png" alt="">
+					<img src="./assets/img/package-1.png" alt="">
 					<h3>PACKAGE 1</h3>
 					<p>Lorem ipsum dolor sit,<br> amet consectetur adipisicing.</p>
 				</div>
 				<div class="popular-menu-items">
-					<img src="/assets/img/package-2.png" alt="">
+					<img src="./assets/img/package-2.png" alt="">
 					<h3>PACKAGE 2</h3>
 					<p>Lorem ipsum dolor sit,<br> amet consectetur adipisicing.</p>
 				</div>
 				<div class="popular-menu-items">
-					<img src="/assets/img/package-3.png" alt="">
+					<img src="./assets/img/package-3.png" alt="">
 					<h3>PACKAGE 3</h3>
 					<p>Lorem ipsum dolor sit,<br> amet consectetur adipisicing.</p>
 				</div>
@@ -82,7 +82,7 @@
 			<div class="chicken-wrapper">
 				<div class="chicken-box">
 					<div class="chicken-img">
-						<img src="/assets/img/package-4.png" alt="">
+						<img src="./assets/img/package-4.png" alt="">
 					</div>
 					<div class="chicken-info">
 						<h2>CHICKEN WINGS</h2>
@@ -130,7 +130,7 @@
 						<a href="#" class="satay-btn">ORDER NOW</a>
 					</div>
 					<div class="satay-img">
-						<img src="/assets/img/package-5.png" alt="">
+						<img src="./assets/img/package-5.png" alt="">
 					</div>
 				</div>
 			</div>
@@ -141,7 +141,7 @@
 		<div class="container">
 			<div class="chef-wrapper">
 				<div class="chef-info">
-					<img src="/assets/img/chef.png" alt="chef">
+					<img src="./assets/img/chef.png" alt="chef">
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Temporibus vitae, optio id nulla
 						consectetur et.</p>
 					<h3>Luella Harris</h3>
